--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0"
+  },
+  "dependencies": {
+    "discordx": "^9.7.3"
   }
 }
