--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/turndown": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.17.0"
   },
   "dependencies": {
-    "discordx": "^9.7.3"
+    "discordx": "^9.7.3",
+    "fuse.js": "^6.6.2",
+    "turndown": "^7.1.1"
   }
 }
