--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./build/main.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
+    "cleanBuildRun": "rm -rf build && tsc -p . || node build/src/scripts/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
