--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "./build/main.js",
   "scripts": {
     "lint": "eslint . --ext .ts",
-    "cleanBuildRun": "rm -rf build && tsc -p . || node build/src/scripts/main.js",
+    "clean": "rm -rf build",
+    "build": "tsc -p .",
+    "run": "node build/warforged/src/scripts/main.js",
+    "cleanBuildRun": "rm -rf build && tsc -p . || node build/warforged/src/scripts/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
