chore: update ironleaf foundry to 1.0.0

--- a/src/data/lancer/lcp/homebrew/ironleaf-foundry/lcp_manifest.json
+++ b/src/data/lancer/lcp/homebrew/ironleaf-foundry/lcp_manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Ironleaf Foundry",
-  "version": "0.0.13",
+  "version": "1.0.0",
   "author": "Ikiryo",
   "item_prefix": "ironleaf",
-  "description": "Ironleaf Foundry by Ikiryo, LCP version by Nasajin."
+  "description": "Ironleaf Foundry by Ikiryo, LCP created and maintained by Nasajin."
 }
