--- a/src/data/lancer/lcp/homebrew/event horizon & suns/lcp_manifest.json
+++ b/src/data/lancer/lcp/homebrew/event horizon & suns/lcp_manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Event Horizon & Suns",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "item_prefix": "ehs",
   "description": "Playtest LCP for EH&S. LCP version by Nasajin.",
-  "author": "Pencil Dragon"
+  "author": "Pencil Dragon & Nasajin"
 }
