chore: update all first party lcps and several homebrew

--- a/src/data/lancer/lcp/dustgrave/lcp_manifest.json
+++ b/src/data/lancer/lcp/dustgrave/lcp_manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "LANCER: Dustgrave",
-  "author": "RALF",
-  "description": "Upcomig Supplement Test Run",
-  "item_prefix": "Lancer: Dustgrave",
-  "version": "3.0",
-  "image_url": "",
-  "website": ""
+  "author": "Ralf Ziegler",
+  "description": "COMP/CON data for Dustgrave, a structured mission module for Lancer, written and designed by Ralf Ziegler. Includes the IPS-N Störtebeker, SSC Viceroy, new talents, weapons, a system, a core bonus, NPC Templates and exotic gear.",
+  "item_prefix": "dustgrave-",
+  "version": "1.3.0",
+  "image_url": "https://d2c79xe1p61csc.cloudfront.net/other/dustgravecover.jpg",
+  "website": "https://massif-press.itch.io/dustgrave"
 }
