--- a/src/data/lancer/lcp/homebrew/mfecane/lcp_manifest.json
+++ b/src/data/lancer/lcp/homebrew/mfecane/lcp_manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Field Guide to Mfecane",
-  "author": "NHP SHAKA",
+  "author": "Written by NHP SHAKA, edits by Cara!",
   "description": "Built at the behest of SHAKA",
   "item_prefix": "MFC",
-  "version": "0.2.0",
+  "version": "0.2.4",
   "image_url": "https://cdn.discordapp.com/attachments/813876747912085514/907645066502352936/mfc_logo.png"
 }
