fix: cleanbuildrun script doesn't run when there are no failures

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf build",
     "build": "tsc -p .",
     "run": "node build/warforged/src/scripts/main.js",
-    "cleanBuildRun": "rm -rf build && tsc -p . || node build/warforged/src/scripts/main.js",
+    "cleanBuildRun": "rm -rf build && tsc -p . && node build/warforged/src/scripts/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
