--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint": "^8.56.0"
   },
   "dependencies": {
-    "discordx": "^11.9.0",
+    "discord.js": "^14.14.1",
     "fuse.js": "^7.0.0",
     "turndown": "^7.1.2"
   }
