--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,5 +7,17 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install modules
         run: npm install
+      - name: CI setup
+        run: npm run ci_setup
+      - name: Clean
+        run: npm run clean
+      - name: Build
+        run: npm run build
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install modules
+        run: npm install
       - name: Run ESLint
         run: npm run lint
